--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.7.4",
-    "vite": "^3.0.0",
-    "vite-plugin-solid": "^2.3.0"
-  },
-  "dependencies": {
-    "solid-js": "^1.4.7"
-  }
+	"name": "vite-template-solid",
+	"version": "0.0.0",
+	"description": "",
+	"scripts": {
+		"start": "vite",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"prettier": "^2.7.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.0.0",
+		"vite-plugin-solid": "^2.3.0"
+	},
+	"dependencies": {
+		"solid-js": "^1.4.7"
+	}
 }
