--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-	"name": "vite-template-solid",
-	"version": "0.0.0",
+	"name": "solid-collapse",
+	"version": "0.9.0",
 	"description": "",
 	"scripts": {
 		"start": "vite",
 		"dev": "vite",
-		"build": "vite build",
+		"build": "rimraf dist && vite build",
 		"serve": "vite preview"
 	},
-	"license": "MIT",
+	"license": "0BSD",
 	"devDependencies": {
 		"prettier": "^2.7.1",
+		"rimraf": "^3.0.2",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0",
-		"vite-plugin-solid": "^2.3.0"
-	},
-	"dependencies": {
+		"vite-plugin-solid": "^2.3.0",
 		"solid-js": "^1.4.7"
 	}
 }
