--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
 		"start": "vite",
 		"dev": "vite",
 		"build": "rimraf dist && vite build",
+		"postbuild": "cpy dist/Collapse.d.ts dist --rename index.d.ts --flat && rimraf dist/Collapse.d.ts",
 		"serve": "vite preview"
 	},
 	"license": "0BSD",
 	"devDependencies": {
+		"cpy-cli": "^4.1.0",
 		"prettier": "^2.7.1",
 		"rimraf": "^3.0.2",
+		"solid-js": "^1.4.7",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0",
-		"vite-plugin-solid": "^2.3.0",
-		"solid-js": "^1.4.7"
+		"vite-plugin-solid": "^2.3.0"
+	},
+	"dependencies": {
+		"vite-plugin-dts": "^1.4.1"
 	}
 }
