--- a/examples/package.json
+++ b/examples/package.json
@@ -12,11 +12,11 @@
 	"devDependencies": {
 		"@types/prismjs": "^1.26.0",
 		"prettier": "^2.7.1",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"vite": "^3.0.0",
+		"vite-plugin-solid": "^2.3.0"
 	},
 	"dependencies": {
-		"vite": "^3.0.0",
-		"vite-plugin-solid": "^2.3.0",
 		"prismjs": "^1.28.0",
 		"solid-js": "^1.4.7",
 		"vite-plugin-prismjs": "^0.0.8"
