--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "rimraf dist && vite build",
 		"postbuild": "cpy dist/Collapse.d.ts dist --rename index.d.ts --flat && rimraf dist/Collapse.d.ts",
-		"build:examples": "cd examples && yarn && yarn build",
+		"build:examples": "yarn build && cpy dist examples/pkg --flat && cd examples && yarn && yarn build",
 		"serve": "vite preview"
 	},
 	"license": "0BSD",
@@ -18,9 +18,8 @@
 		"solid-js": "^1.4.7",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0",
-		"vite-plugin-solid": "^2.3.0"
-	},
-	"dependencies": {
+		"vite-plugin-solid": "^2.3.0",
 		"vite-plugin-dts": "^1.4.1"
-	}
+	},
+	"dependencies": {}
 }
