--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "solid-collapse",
 	"version": "0.9.0",
+	"author": "Simone Mastromattei <smastrom@proton.me>",
 	"private": "false",
 	"description": "Tiny and performant collapse component for SolidJS.",
 	"keywords": [
@@ -11,14 +12,25 @@
 		"solid-collapse",
 		"solid-accordion"
 	],
+	"homepage": "https://solid-collapse.onrender.com/",
+	"bugs": {
+		"url": "https://github.com/smastrom/solid-collapse/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/smastrom/solid-collapse.git"
+	},
 	"license": "MIT",
+	"sideEffects": false,
 	"type": "module",
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
 		}
 	},
+	"main": "dist/index.cjs",
 	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"files": [
 		"dist"
 	],
@@ -44,5 +56,8 @@
 		"vite": "^3.0.0",
 		"vite-plugin-dts": "^1.4.1",
 		"vite-plugin-solid": "^2.3.0"
+	},
+	"peerDependencies": {
+		"solid-js": ">=1.2.0"
 	}
 }
