--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "rimraf dist && vite build",
-		"postbuild": "cpy dist/Collapse.d.ts dist --rename index.d.ts --flat && rimraf dist/Collapse.d.ts",
+		"build": "rimraf dist && vite build && yarn declare",
+		"declare": "tsc src/Collapse.tsx --declaration --emitDeclarationOnly --jsx preserve",
+		"postbuild": "cpy src/Collapse.d.ts dist --rename index.d.ts --flat && rimraf src/Collapse.d.ts",
 		"build:ci": "rimraf dist && vite build --mode ci",
 		"cypress:dev": "NODE_ENV=DEV cypress open",
 		"cypress:open": "NODE_ENV=CI cypress open",
@@ -57,7 +58,6 @@
 		"solid-js": "^1.6.2",
 		"typescript": "^4.9.3",
 		"vite": "^3.2.4",
-		"vite-plugin-dts": "^1.7.1",
 		"vite-plugin-solid": "^2.4.0"
 	},
 	"peerDependencies": {
