--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
+		"skipLibCheck": true,
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
 		"types": ["vite/client"],
