--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"build": "rimraf dist && vite build && yarn declare",
 		"declare": "tsc src/Collapse.tsx --declaration --emitDeclarationOnly --jsx preserve",
 		"postbuild": "cpy src/Collapse.d.ts dist --rename index.d.ts --flat && rimraf src/Collapse.d.ts",
-		"build:ci": "rimraf dist && vite build --mode ci",
+		"build:app": "rimraf dist && vite build --mode app",
 		"cypress:dev": "NODE_ENV=DEV cypress open",
 		"cypress:open": "NODE_ENV=CI cypress open",
 		"dev": "vite",
